--- a/template/css/style.less
+++ b/template/css/style.less
@@ -45,122 +45,107 @@
     color: @color;
 }
 
-* {box-sizing:border-box}
-
+* {
+  box-sizing: border-box;
+}
 /* definition list */
-
 body {
-    font-family: "Open Sans", sans-serif;
-    line-height: 1.5em;
-    .commonTags (@m_bg_color, @m_font_size, @m_body_margin);
+  font-family: "Open Sans", sans-serif;
+  line-height: 1.5em;
+  background-color: white;
+  font-size: 16px;
+  margin: 0 1em;
 }
-
-p, h1, h2, h3 {
-    margin: @p_h_margin;
-}
-
-h1, h2, h3 {
-    font-weight: bold;
-}
-
-h1 {
-    .size1 (@h1_font_size);
-    font-size: @h1_font_size;
-	text-shadow: 2px 2px #989898;
-	margin-bottom: 0;
-	margin-top: 0;
-	line-height: 2em;
-}
-
-h2 {
-    .size1 (@h2_font_size);
-}
-
+p,
+h1,
+h2,
 h3 {
-    .size1 (@h3_font_size);
-	font-style: italic;
+  margin: 1em 1em 1em 0;
 }
-
-h2 { text-align: center;
-    
+h1,
+h2,
+h3 {
+  font-weight: bold;
 }
-
-dt, dd {
-   font-family: Arial, Helvetica, sans-serif;
-   margin: 2px 0;
+h1 {
+  font-size: 2em;
+  text-shadow: 2px 2px #989898;
+  margin-bottom: 0;
+  margin-top: 0;
+  line-height: 2em;
 }
-
+h2 {
+  font-size: 1.4em;
+}
+h3 {
+  font-size: 1.1em;
+  font-style: italic;
+}
+h2 {
+  text-align: center;
+}
+dt,
+dd {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 2px 0;
+}
 dt {
-    cursor: pointer;
-    font-size: 1.5em;
+  cursor: pointer;
+  font-size: 1.5em;
 }
 dt:hover {
-    color: #ac92ec;
+  color: #ac92ec;
 }
-
 dd {
-    font-size: 1.2em;
-    font-style: italic;
+  font-size: 1.2em;
+  font-style: italic;
 }
-
 /* arrow icon left */
-
 dt:before {
-    border: 0.5em solid;
-    border-color: transparent transparent transparent #f2eeef;
-    content: '';
-    display: inline-block;
-    height: 0;
-    margin-right: 0.5em;
-    vertical-align: middle;
-    width: 0;
+  border: 0.5em solid;
+  border-color: transparent transparent transparent #f2eeef;
+  content: '';
+  display: inline-block;
+  height: 0;
+  margin-right: 0.5em;
+  vertical-align: middle;
+  width: 0;
 }
-
 dt:hover:before {
-    border-left-color: #ac92ec;
-
+  border-left-color: #ac92ec;
 }
-
 /* arrow icon down */
-
 dt.open:before {
-    border-color: #f2eeef transparent transparent transparent;
-    border-bottom-width: 0;
+  border-color: #f2eeef transparent transparent transparent;
+  border-bottom-width: 0;
 }
-    
 dt.open:hover:before {
-    border-left-color: transparent;
-    border-top-color: #ac92ec;
+  border-left-color: transparent;
+  border-top-color: #ac92ec;
 }
-
 .headings {
-    font-family: monospace;
+  font-family: monospace;
 }
-
 #honeypot {
-    display: none; 
+  display: none;
 }
-
 footer {
-     background-color: #ffffff;
-    .color1 (@footer_color);
-     font-size: 1.0em; 
-     font-style: italic; 
-     padding-top: 100px; 
-     padding-bottom: 10px; 
-     text-align: center; 
-} 
-
+  background-color: #ffffff;
+  color: black;
+  font-size: 1.0em;
+  font-style: italic;
+  padding-top: 100px;
+  padding-bottom: 10px;
+  text-align: center;
+}
 footer a {
-    margin-right: .5em;
-    
+  margin-right: .5em;
 }
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: #333;
   overflow: hidden;
 }
-
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
@@ -171,19 +156,16 @@ footer a {
   text-decoration: none;
   font-size: 17px;
 }
-
 /* Change the color of links on hover */
 .topnav a:hover {
   background-color: #ddd;
   color: black;
 }
-
 /* Add an active class to highlight the current page */
 .topnav a.active {
   background-color: #ff0000;
   color: white;
 }
-
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
   display: none;
@@ -194,14 +176,13 @@ footer a {
   position: relative;
   margin: auto;
 }
-
 /* Hide the images by default */
 .mySlides {
   display: none;
 }
-
 /* Next & previous buttons */
-.prev, .next {
+.prev,
+.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -215,18 +196,16 @@ footer a {
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
-
 /* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
-
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
-
 /* Caption text */
 .text {
   color: #f2f2f2;
@@ -237,7 +216,6 @@ footer a {
   width: 100%;
   text-align: center;
 }
-
 /* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
@@ -246,7 +224,6 @@ footer a {
   position: absolute;
   top: 0;
 }
-
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
@@ -258,11 +235,10 @@ footer a {
   display: inline-block;
   transition: background-color 0.6s ease;
 }
-
-.active, .dot:hover {
+.active,
+.dot:hover {
   background-color: #717171;
 }
-
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
@@ -270,29 +246,42 @@ footer a {
   animation-name: fade;
   animation-duration: 1.5s;
 }
-
 @-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
-
 @keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
-
 /* Style inputs with type="text", select elements and textareas */
-input[type=text], select, textarea {
-  width: 100%; /* Full width */
-  padding: 12px; /* Some padding */  
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+input[type=text],
+select,
+textarea {
+  width: 100%;
+  /* Full width */
+  padding: 12px;
+  /* Some padding */
+  border: 1px solid #ccc;
+  /* Gray border */
+  border-radius: 4px;
+  /* Rounded borders */
+  box-sizing: border-box;
+  /* Make sure that padding and width stays in place */
+  margin-top: 6px;
+  /* Add a top margin */
+  margin-bottom: 16px;
+  /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */;
 }
-
 /* Style the submit button with a specific background color etc */
 input[type=submit] {
   background-color: #4CAF50;
@@ -302,19 +291,16 @@ input[type=submit] {
   border-radius: 4px;
   cursor: pointer;
 }
-
 /* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
   background-color: #45a049;
 }
-
 /* Add a background color and some padding around the form */
 .container {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
 }
-
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
@@ -322,30 +308,10 @@ input[type=submit]:hover {
     float: right;
     display: block;
   }
-    body {
-    .commonTags (@t_bg_color, @t_font_size, @t_body_margin)
-}
-
-h2 {
-    margin-top: 0;
-    margin-bottom: .8em;
-}
-
-h3 {
-    margin-top: 0;
-}
-
-ol {
-    margin-bottom: 15px;
-}
-    
-ul {
-    margin-bottom: 1em;
-}
 }
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media only screen and (min-width: 1025px)  {
+@media screen and (max-width: 600px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive a.icon {
     position: absolute;
@@ -357,7 +323,4 @@ ul {
     display: block;
     text-align: left;
   }
-    body {
-    .commonTags (@d_bg_color, @d_font_size, @d_body_margin)
-}
 }
