--- a/template/css/style.less
+++ b/template/css/style.less
@@ -1,31 +1,21 @@
-/* VARIABLES */
-
 /* colors */
 
-@m_bg_color: white;
-@t_bg_color: white;
-@d_bg_color: white;
+@bg_color: white;
 @footer_color: black;
 @references_hover_color: #E8E8E8;
 @references_bg_color: #0000FF;
 
 /* sizes */
 
-@m_font_size: 16px;
-@t_font_size: 15px;
-@d_font_size: 14px;
+@font_size: 16px;
 @h1_font_size: 2em;
-@h2_font_size: 1.4em;
-@h3_font_size: 1.1em;
-@contact_font_size: 1.5em;
+
 
 /* margins */
 
-@p_h_margin: 1em 1em 1em 0;
-@m_body_margin: 0 1em;
-@t_body_margin: 0 3em;
-@d_body_margin: 0 4em;
-@ol_li_left_margin: 0;
+@margin: 1em 1em 1em 0;
+@body_margin: 0 4em;
+@ol_margin: 0;
 
 /* MIXINS */
 
@@ -284,7 +274,7 @@ textarea {
 }
 /* Style the submit button with a specific background color etc */
 input[type=submit] {
-  background-color: #4CAF50;
+  background-color: #ff0000;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -293,7 +283,7 @@ input[type=submit] {
 }
 /* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
-  background-color: #45a049;
+  background-color: #ff0000;
 }
 /* Add a background color and some padding around the form */
 .container {
